--- a/passport.conf.reference.yaml
+++ b/passport.conf.reference.yaml
@@ -1,12 +1,12 @@
 face: "http"
-addr: ":9999"
+addr: ":8080"
 log_dir: "./logs"
 log_level: "debug"
 redis: "127.0.0.1:19738"
 mysql: "root:lhisroot@tcp(127.0.0.1:3306)/passport?charset=utf8&parseTime=true&loc=Local"
 
-session:
-  store_type: "mem"
-  expire: 86400
+session_store_type: "mem"
+session_expire: 86400
 
-access_control: true #是否启用权限控制模块
+access_control: true # 是否启用权限控制模块
+is_enant: true # 是否启用租户模块
