--- a/client/nginx/demo.passport.conf
+++ b/client/nginx/demo.passport.conf
@@ -16,7 +16,7 @@ server {
     gzip_types text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
     gzip_vary on;
     
-    # curl -v -X GET -H "Host:demo.passport.com" --cookie "go-session-id=MTYxNDE0N" "http://127.0.0.1/logic-demo"
+    # curl -v -X GET -H "Host:demo.passport.com" --cookie "go-session-id=MTYxNDE0N" "http://127.0.0.1/api"
     location ~ /api/ {
         access_by_lua_file /Users/liuheng/dev/go/passport/client/nginx/access_by_passport.lua;
 
