--- a/client/nginx/demo.passport.conf
+++ b/client/nginx/demo.passport.conf
@@ -3,11 +3,11 @@ upstream passport_backend {
 }
 
 server {
-    listen 80;
+    listen 8001;
     server_name  demo.passport.com;
 
-    access_log  /tmp/logs/access.log  main;
-    error_log  /tmp/logs/error.log;
+    access_log  /tmp/access.log  main;
+    error_log  /tmp/error.log;
 
     default_type 'application/json';
     gzip on;
@@ -17,7 +17,7 @@ server {
     gzip_vary on;
     
     # curl -v -X GET -H "Host:demo.passport.com" --cookie "go-session-id=MTYxNDE0N" "http://127.0.0.1/api"
-    location ~ /api/ {
+    location ~ ^/api/ {
         access_by_lua_file /Users/liuheng/dev/go/passport/client/nginx/access_by_passport.lua;
 
         content_by_lua_block {
