--- a/example/nginx/demo.passport.conf
+++ b/example/nginx/demo.passport.conf
@@ -9,7 +9,7 @@ server {
     access_log  /tmp/access.log  main;
     error_log  /tmp/error.log;
 
-    default_type 'application/json';
+    default_type 'application/json;charset-UTF-8';
     gzip on;
     gzip_min_length 1k;
     gzip_comp_level 9;
