--- a/example/nginx/demo.passport.conf
+++ b/example/nginx/demo.passport.conf
@@ -1,5 +1,5 @@
 upstream passport_backend {
-    server  127.0.0.1:8080 max_fails=3 fail_timeout=30s;
+    server  127.0.0.1:10001 max_fails=3 fail_timeout=30s;
 }
 
 server {
@@ -18,7 +18,7 @@ server {
     
     # curl -v -X GET -H "Host:demo.passport.com" --cookie "go-session-id=MTYxNDE0N" "http://127.0.0.1/api"
     location ~ ^/api/ {
-        access_by_lua_file /Users/liuheng/dev/go/passport/client/nginx/access_by_passport.lua;
+        access_by_lua_file /Users/liuheng/dev/go/passport/example/nginx/access_by_passport.lua;
 
         content_by_lua_block {
             local ck = require "resty.cookie"
@@ -46,7 +46,7 @@ server {
     }
 
     # curl -v -X POST -H "Host:demo.passport.com" -H "X-API: user/login" -d '{"cellphone": "17688396387", "password": "123456"}' "http://127.0.0.1/user"
-    location /user {
+    location /usercenter {
         proxy_pass http://passport_backend;
     }
 }
