--- a/example/nginx/demo.passport.conf
+++ b/example/nginx/demo.passport.conf
@@ -18,6 +18,8 @@ server {
     
     # curl -v -X GET -H "Host:demo.passport.com" --cookie "go-session-id=MTYxNDE0N" "http://127.0.0.1/api"
     location ~ ^/api/ {
+        default_type 'application/json;charset=UTF-8';
+        #set $xRequestedBy serviceApi;
         access_by_lua_file /Users/liuheng/dev/go/passport/example/nginx/access_by_passport.lua;
 
         content_by_lua_block {
