--- a/passport.conf.reference.yaml
+++ b/passport.conf.reference.yaml
@@ -9,6 +9,10 @@ mysql: "root:lhisroot@tcp(127.0.0.1:3306)/passport?charset=utf8mb4&parseTime=Tru
 session_store_type: "mem" # cookie
 session_expire: 0 # -1: 删除；0: 本会话; >0...
 
-admin_tenant_id: 10030 # 管理接口只有指定的租户可用
+admin_tenant_id: 10 # 管理接口只有指定的租户可用
 
 api_conf:
+  "api1":
+    need_access: false
+  "*": # 默认值
+    need_access: true
